--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         <div class="second-section-item-1">
                             <p class="second-section-p">Bitcoin BTC</p>
                         </div>
-                        <div class="second-section-item-2" id="btc-price"></div>
-                        <div class="second-section-item-3" id="btc-change"></div>
+                        <div class="second-section-item-2" id="btc-price">$1,866.29</div>
+                        <div class="second-section-item-3" id="btc-change">-2.55%</div>
                     </div>
                     <div class="column-5">
                         <img class="second-section-icon" src="images/image 5.png">
