--- a/index.html
+++ b/index.html
@@ -67,40 +67,40 @@
                         <div class="second-section-item-1">
                             <p class="second-section-p">Bitcoin BTC</p>
                         </div>
-                        <div class="second-section-item-2" id="btc-price">$1,866.29</div>
-                        <div class="second-section-item-3" id="btc-change">-2.55%</div>
+                        <div class="second-section-item-2" id="btc-price"></div>
+                        <div class="second-section-item-3" id="btc-change"></div>
                     </div>
                     <div class="column-5">
                         <img class="second-section-icon" src="images/image 5.png">
                         <div class="second-section-item-1">
                             <p class="second-section-p">Ethereum ETH</p>
                         </div>
-                        <div class="second-section-item-2" id="eth-price">$1,866.29</div>
-                        <div class="second-section-item-3" id="eth-change">-2.55%</div>
+                        <div class="second-section-item-2" id="eth-price"></div>
+                        <div class="second-section-item-3" id="eth-change">-</div>
                     </div>
                     <div class="column-5">
                         <img class="second-section-icon" src="images/image 6.png">
                         <div class="second-section-item-1">
                             <p class="second-section-p">Tether USDT</p>
                         </div>
-                        <div class="second-section-item-2" id="usdt-price">$1,866.29</div>
-                        <div class="second-section-item-3" id="usdt-change">-2.55%</div>
+                        <div class="second-section-item-2" id="usdt-price"></div>
+                        <div class="second-section-item-3" id="usdt-change"></div>
                     </div>
                     <div class="column-5">
                         <img class="second-section-icon" src="images/image 7.png">
                         <div class="second-section-item-1">
                             <p class="second-section-p">BNB BNB</p>
                         </div>
-                        <div class="second-section-item-2" id="bnb-price">$1,866.29</div>
-                        <div class="second-section-item-3" id="bnb-change">-2.55%</div>
+                        <div class="second-section-item-2" id="bnb-price"></div>
+                        <div class="second-section-item-3" id="bnb-change"></div>
                     </div>
                     <div class="column-5">
                         <img class="second-section-icon" src="images/image 8.png">
                         <div class="second-section-item-1">
                             <p class="second-section-p">USD Coin USDC</p>
                         </div>
-                        <div class="second-section-item-2" id="usdc-price">$1,866.29</div>
-                        <div class="second-section-item-3" id="usdc-change">-2.55%</div>
+                        <div class="second-section-item-2" id="usdc-price"></div>
+                        <div class="second-section-item-3" id="usdc-change"></div>
                     </div>
                 </div>
             </div>
