--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <div class="mars-wrapper">
                         <div class="fs-text-wrapper">
                             <div class="column-1">
-                                <h1>All-in-One Crypto Tracking Solution</h1>
+                                <h1 class="first-section-title">All-in-One Crypto Tracking Solution</h1>
                             </div>
                             <div class="column-2">
-                                <h2>Track. Analyze. Thrive.</h2>
+                                <h2 class="first-section-subtitle">Track. Analyze. Thrive.</h2>
                             </div>
                             <div class="column-3">
                                 <button class="learn-more">
