--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav>
             <div class="menu-toggle"><i class="fa fa-bars"></i>
-                <img src="images/Logo full.png">
+                <img src="images/Logo full.webp">
                 <div class="header-button-wrapper">
                     <button onclick="mobileMenu()">
                         <label class="burger" for="burger-label">
@@ -50,7 +50,8 @@
                                 </button>
                             </div>
                         </div>
-                        <img class="fs-mars" src="images/landing-mars.png">
+                        <img class="fs-mars" src="images/landing-mars.webp
+    ">
                     </div>
                 </div>
             </div>
@@ -63,7 +64,8 @@
                         <h3 class="second-section-header">Market</h3>
                     </div>
                     <div class="column-5">
-                        <img class="second-section-icon" src="images/image 4.png">
+                        <img class="second-section-icon" src="images/image 4.webp
+    ">
                         <div class="second-section-item-1">
                             <p class="second-section-p">Bitcoin BTC</p>
                         </div>
@@ -71,7 +73,8 @@
                         <div class="second-section-item-3" id="btc-change"></div>
                     </div>
                     <div class="column-5">
-                        <img class="second-section-icon" src="images/image 5.png">
+                        <img class="second-section-icon" src="images/image 5.webp
+    ">
                         <div class="second-section-item-1">
                             <p class="second-section-p">Ethereum ETH</p>
                         </div>
@@ -79,7 +82,8 @@
                         <div class="second-section-item-3" id="eth-change">-</div>
                     </div>
                     <div class="column-5">
-                        <img class="second-section-icon" src="images/image 6.png">
+                        <img class="second-section-icon" src="images/image 6.webp
+    ">
                         <div class="second-section-item-1">
                             <p class="second-section-p">Tether USDT</p>
                         </div>
@@ -87,7 +91,8 @@
                         <div class="second-section-item-3" id="usdt-change"></div>
                     </div>
                     <div class="column-5">
-                        <img class="second-section-icon" src="images/image 7.png">
+                        <img class="second-section-icon" src="images/image 7.webp
+    ">
                         <div class="second-section-item-1">
                             <p class="second-section-p">BNB BNB</p>
                         </div>
@@ -95,7 +100,8 @@
                         <div class="second-section-item-3" id="bnb-change"></div>
                     </div>
                     <div class="column-5">
-                        <img class="second-section-icon" src="images/image 8.png">
+                        <img class="second-section-icon" src="images/image 8.webp
+    ">
                         <div class="second-section-item-1">
                             <p class="second-section-p">USD Coin USDC</p>
                         </div>
@@ -109,22 +115,26 @@
         <div class="container">
             <div class="third-section">
                 <div class="third-section-img-wrapper"></div>
-                    <img src="images/photo-1630694093867-4b947d812bf0 3.png">
+                    <img src="images/photo-1630694093867-4b947d812bf0 3.webp
+">
                     <div class="third-section-real-wrapper">
                         <div class="item-3">
                             <h3 class="third-section-title">Real-time <br> crypto tracking</h3>
                         </div>
                         <div class="item-4">
                             <div class="column-6">
-                                <img class="third-section-check-img" src="images/check mark.png">
+                                <img class="third-section-check-img" src="images/check mark.webp
+            ">
                                 <h3 class="third-section-h3">Trusted by users worldwide.</h3>
                             </div>
                             <div class="column-6">
-                                <img class="third-section-check-img" src="images/check mark.png">
+                                <img class="third-section-check-img" src="images/check mark.webp
+            ">
                                 <h3 class="third-section-h3">Delivering excellence and reliability.</h3>
                             </div>
                             <div class="column-6">
-                                <img class="third-section-check-img" src="images/check mark.png">
+                                <img class="third-section-check-img" src="images/check mark.webp
+            ">
                                 <h3 class="third-section-h3">Building trust through exceptional service.</h3>
                             </div>
                         </div>
@@ -162,13 +172,16 @@
                             <input type="radio" name="slider" id="item-3">
                           <div class="cards">
                             <label class="card" for="item-1" id="song-1">
-                              <img src="images/slika 9.png" alt="song">
+                              <img src="images/slika 9.webp
+            " alt="song">
                             </label>
                             <label class="card" for="item-2" id="song-2">
-                              <img src="images/slika 10.png" alt="song">
+                              <img src="images/slika 10.webp
+            " alt="song">
                             </label>
                             <label class="card" for="item-3" id="song-3">
-                              <img src="images/slika 11.png" alt="song">
+                              <img src="images/slika 11.webp
+            " alt="song">
                             </label>
                           </div>
                           <div class="player">
@@ -237,7 +250,8 @@
             <div class="sixth-section">
                 <div class="six-section-wrapper">
                     <div class="item-8">
-                        <img src="images/Logo wht.png">
+                        <img src="images/Logo wht.webp
+    ">
                     </div>
                     <div class="item-9">
                         <ul class="footer-navigation">
