--- a/index.html
+++ b/index.html
@@ -23,16 +23,15 @@
                 </div>
                 <ul class="navigation">
                     <li><a href="#home-section">Home</a></li>
-                    <li><a href="#projects-section">Market</a></li>
-                    <li><a href="#about-me-section">Portfolio</a></li>
-                    <li><a href="#contact-section">News</a></li>
+                    <li><a href="#market-section">Market</a></li>
+                    <li><a href="#news-section">News</a></li>
                 </ul>
             </div>
         </nav>
 
         <div class="container">
             <div class="fs-container">
-                <div class="first-section">
+                <div class="first-section" id="home-section">
                     <div class="mars-wrapper">
                         <div class="fs-text-wrapper">
                             <div class="column-1">
@@ -58,7 +57,7 @@
         </div>
 
         <div class="container">
-            <div class="second-section">
+            <div class="second-section" id="market-section">
                 <div class="item-1">
                     <div class="column-4">
                         <h3 class="second-section-header">Market</h3>
@@ -144,7 +143,7 @@
         </div>
 
         <div class="container">
-            <div class="fourth-section">
+            <div class="fourth-section" id="news-section">
                 <div class="fourth-section-header-wrapper">
                     <h2 class="foruth-section-header">News</h2>
                 </div>
